--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h1, h2 {
 	border:solid 2px #f7b2b2;
 }
 .caption {
-	font-family: "Clicker Script", Sans-serif;
+	font-family: "Alice", serif;
 }
 .couple-ring-1::before {
     content: '';
@@ -44,7 +44,7 @@ h1, h2 {
     height: 100%;
     position: absolute;
     left: 0;
-    background: url('./images/border-couple-1.png') center center no-repeat;
+    background: url('/images/border-couple-1.png') center center no-repeat;
     background-size: contain;
 }
 .couple-ring-2::before {
@@ -54,7 +54,7 @@ h1, h2 {
     height: 100%;
     position: absolute;
     left: 0;
-    background: url('./images/border-couple-2.png') center center no-repeat;
+    background: url('/images/border-couple-2.png') center center no-repeat;
     background-size: contain;
 }
 .couple-ring img {
