--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ h1, h2 {
 }
 .information h3::before {
     content: '';
-    background: url('./images/border-information-tl.png') top left no-repeat;
+    background: url('/images/border-information-tl.png') top left no-repeat;
     top: -10px;
     left: 5px;
     background-size: contain;
