--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h1, h2 {
     height: 100%;
     position: absolute;
     left: 0;
-    background: url('/images/border-couple-1.png') center center no-repeat;
+    background: url('./images/border-couple-1.png') center center no-repeat;
     background-size: contain;
 }
 .couple-ring-2::before {
