--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ h1, h2 {
     height: 100%;
     position: absolute;
     left: 0;
-    background: url('/images/border-couple-2.png') center center no-repeat;
+    background: url('./images/border-couple-2.png') center center no-repeat;
     background-size: contain;
 }
 .couple-ring img {
@@ -86,28 +86,28 @@ h1, h2 {
 }
 .information h3::before {
     content: '';
-    background: url('/images/border-information-tl.png') top left no-repeat;
+    background: url('./images/border-information-tl.png') top left no-repeat;
     top: -10px;
     left: 5px;
     background-size: contain;
 }
 .information h3::after {
     content: '';
-    background: url('/images/border-information-tr.png') top left no-repeat;
+    background: url('./images/border-information-tr.png') top left no-repeat;
     top: -10px;
     right: 7px;
     background-size: contain;
 }
 .information::before {
     content: '';
-    background: url('/images/border-information-bl.png') bottom left no-repeat;
+    background: url('./images/border-information-bl.png') bottom left no-repeat;
     bottom: -10px;
     left: 5px;
     background-size: contain;
 }
 .information::after {
     content: '';
-    background: url('/images/border-information-br.png') bottom left no-repeat;
+    background: url('./images/border-information-br.png') bottom left no-repeat;
     bottom: -10px;
     right: 5px;
     background-size: contain;
