--- a/style.css
+++ b/style.css
@@ -35,6 +35,9 @@ h1, h2 {
 	border:solid 2px #f7b2b2;
 }
 .caption {
+	font-family: 'Alice', serif;
+}
+.captions {
 	font-family: "Clicker Script", Sans-serif;
 }
 .couple-ring-1::before {
