--- a/style.css
+++ b/style.css
@@ -6,11 +6,13 @@ html, body {
     	background-size: contain;
 	transition: all 0.3s ease;
     	scroll-behavior: smooth;
-	overflow: hidden;
 	margin: 0;
  	padding: 0;
   	-webkit-font-smoothing: antialiased;
  	-moz-osx-font-smoothing: grayscale;
+}
+body {
+    overflow: hidden;
 }
 html.has-lightbox {
 	overflow: hidden;
