--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html, body {
  	padding: 0;
   	-webkit-font-smoothing: antialiased;
  	-moz-osx-font-smoothing: grayscale;
+	scroll-behavior: smooth;
 }
 body {
     overflow: hidden;
